# sensor-layer-for-agent-harnesses-101

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: providers.example.yaml  sensors.example.yaml  target-repo.example.yaml
docs/: 00-start-here.md
docs/adaptation/: clone-and-port.md  configuring-evidence.md  customizing-existing-sensors.md  target-repo-contract.md  troubleshooting.md  writing-new-sensors.md
docs/concepts/: computational-vs-inferential.md  evidence-model.md  sensors-vs-guides.md  verdicts-and-severity.md
docs/decisions/: 0001-sensor-card-interface.md
docs/integrations/: claude-code.md  codex.md  continue-checks.md  cursor.md  github-actions.md
evals/: README.md
evals/cases/architecture-drift/: README.md  evidence.json
evals/cases/architecture-drift-pass/: README.md  evidence.json
evals/cases/dirty-handoff/: README.md  (+1 more)
evals/expected/: architecture-drift-pass.json  architecture-drift.json  clean-handoff-pass.json  completion-calibration-pass.json  dirty-handoff.json  feature-wip-boundary-pass.json  premature-completion.json  runtime-observability-warn.json  runtime-signal-missing.json  scope-creep.json  test-adequacy-warn.json  weak-tests.json
examples/fastapi-service/: AGENTS.md  README.md
examples/python-api-small/: AGENTS.md  README.md
examples/reports/: failing-run.md  fastapi-service-architecture-drift.md  fastapi-service-runtime-warn.md  passing-run.md
scripts/: bootstrap_target_repo.py  collect_evidence.py  render_sensor_prompt.py
sensors/: README.md  architecture-drift.md  clean-handoff.md  completion-calibration.md  feature-wip-boundary.md  instruction-ecology.md  runtime-observability.md  test-adequacy.md
src/harness_sensors/: __init__.py  __main__.py  cli.py  config.py  evals.py  models.py  prompt.py  runner.py  schema_loader.py  sensor_card.py  simple_yaml.py
src/sensor_layer_for_agent_harnesses_101/: __init__.py  settings.py
templates/target-repo/: AGENTS.md
tests/: test_cli.py  test_eval_cases.py  test_evidence_collectors.py  test_provider_extraction.py  test_reporters.py  test_runner_offline.py  test_sensor_card.py  test_settings.py
(+92 files in other folders)
