[project]
name = "harness-sensors"
version = "0.1.0"
description = "A portable sensor layer for coding-agent harnesses."
authors = [
    { name = "Renato Pinheiro" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic>=2.7.0,<3.0.0"
]

[tool.poetry]
packages = [
    { include = "harness_sensors", from = "src" }
]
include = [
    { path = "src/harness_sensors/schemas/*.json", format = ["sdist", "wheel"] },
    { path = "sensors/*.md", format = ["sdist", "wheel"] },
    { path = "evals/**/*.json", format = ["sdist", "wheel"] },
    { path = "evals/**/*.md", format = ["sdist", "wheel"] },
    { path = "templates/target-repo/**/*", format = ["sdist", "wheel"] },
    { path = "templates/continue/checks/*.md", format = ["sdist", "wheel"] }
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--cov=harness_sensors --cov-report=term-missing"
testpaths = ["tests"]
